@@ -1,5 +1,8 @@
 2004-10-28  Vincent Noel  <vnoel@cox.net>
 
+	* monitor.c (mon_check_logs):
+	* info.c: Remove unnecessary casts.
+
 	* logview.c (logview_help): Handle errors when displaying help,
 	display it on the right screen.
 
